Small cleanup.