@@ -4,24 +4,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class Str77 {
-    public static final String replaceAllRepeating(String where, char c, String with) {
-        String rep = "" + c + c;
-        while (where.contains(rep)) {
-            int i = where.indexOf(rep);
-            where = where.substring(0, i) + with + where.substring(i + 2);
-        }
-        return where;
-    }
 
-    public static void main(String[] args) {
-        P.log(replaceAllRepeating("<a href=\"\"\"\"\"\"\"\"\"\"\"\"\"\"" +
-                "\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"" +
-                "\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\"" +
-                "\"\"\"\"\"\"\"http://searchportal.information.com/?epl=01540021R1\">" +
-                "long...</a>", '\"', "\""));
-    }
-
-    public static final String param(String s, int index) {
+    private static String param(String s, int index) {
         for (int i = 0; i < index; i++) {
             s = s.substring(s.indexOf(' ') + 1);
         }
@@ -32,15 +16,15 @@ public class Str77 {
         }
     }
 
-    public static final int iparam(String s, int index) {
+    public static int iparam(String s, int index) {
         return Integer.parseInt(param(s, index));
     }
 
     /**
      * @param s example: "0-1-23-666-4"
      */
-    public static final Integer[] integerArr(String s) {
-        List list = new ArrayList();
+    public static Integer[] integerArr(String s) {
+        List<String> list = new ArrayList<String>();
         int index = s.indexOf("-");
         while ((index > -1) && !s.equals("")) {
             list.add(s.substring(0, index));
@@ -52,12 +36,12 @@ public class Str77 {
         }
         Integer[] res = new Integer[list.size()];
         for (int i = 0; i < list.size(); i++) {
-            res[i] = new Integer((String) list.get(i));
+            res[i] = Integer.valueOf(list.get(i));
         }
         return res;
     }
 
-    public static final String toString(List list) {
+    public static String toString(List list) {
         int size = list.size();
         if (size == 1) return "" + list.get(0);
         String res = "";
